Harden workflow builder guidance sync