@@ -19,30 +19,32 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.HexFormat;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
 @Service
 public class WorkflowBuilderKnowledgeService {
 
     private static final Logger log = LoggerFactory.getLogger(WorkflowBuilderKnowledgeService.class);
+    private static final String BUILDER_SOURCE_TYPE = "BUILDER";
+    private static final String DOCUMENT_TITLE_PREFIX = "Workflow Builder Guidance: ";
+    private static final String MANAGED_KB_NAME = "Workflow Builder Guidance";
+    private static final String MANAGED_KB_DESCRIPTION =
+            "System-managed governance guidance for workflow generation.";
     private static final int MAX_TOP_K = 6;
     private static final int SCAN_PAGE_SIZE = 200;
     private static final List<DocumentIndexStatus> NON_RETRIEVABLE = List.of(
             DocumentIndexStatus.DELETING, DocumentIndexStatus.DELETED);
-    private static final String MANAGED_KB_NAME = "Workflow Builder Guidance";
-    private static final String MANAGED_KB_DESCRIPTION = "System-managed governance guidance for workflow generation.";
 
     private final WorkflowRuleCatalog workflowRuleCatalog;
     private final KnowledgeBaseRepository knowledgeBaseRepository;
@@ -51,6 +53,7 @@ public class WorkflowBuilderKnowledgeService {
     private final DocumentManagementService documentManagementService;
     private final KnowledgeSearchService knowledgeSearchService;
     private final PublicIdGenerator publicIdGenerator;
+    private final ConcurrentMap<String, Object> ownerSynchronizationLocks = new ConcurrentHashMap<>();
 
     public WorkflowBuilderKnowledgeService(WorkflowRuleCatalog workflowRuleCatalog,
             KnowledgeBaseRepository knowledgeBaseRepository,
@@ -68,24 +71,26 @@ public class WorkflowBuilderKnowledgeService {
         this.publicIdGenerator = publicIdGenerator;
     }
 
-    @Transactional
     public List<Citation> retrieve(String domain, String query, int topK) {
+        String ownerId = SecurityIdentity.currentOwnerId();
         try {
-            String ownerId = SecurityIdentity.currentOwnerId();
-            KnowledgeBaseEntity kb = ensureManagedKnowledgeBase(ownerId);
-            synchronizeGuidance(ownerId, kb.getKbId(), workflowRuleCatalog.activePacks(domain));
+            KnowledgeBaseEntity knowledgeBase;
+            Object ownerLock = ownerSynchronizationLocks.computeIfAbsent(ownerId, ignored -> new Object());
+            synchronized (ownerLock) {
+                knowledgeBase = ensureManagedKnowledgeBase(ownerId);
+                synchronizeGuidance(ownerId, knowledgeBase.getKbId(), workflowRuleCatalog.activePacks(domain));
+            }
             int boundedTopK = Math.max(1, Math.min(topK, MAX_TOP_K));
-            return knowledgeSearchService.searchManaged(kb.getKbId(), query, boundedTopK).citations();
+            return knowledgeSearchService.searchManaged(knowledgeBase.getKbId(), query, boundedTopK).citations();
         }
         catch (RuntimeException exception) {
-            log.warn("Workflow builder knowledge retrieval failed for owner {}", SecurityIdentity.currentOwnerId(),
-                    exception);
+            log.warn("Workflow builder knowledge retrieval failed for owner {}", ownerId, exception);
             return List.of();
         }
     }
 
-    String guidanceContentForTest(WorkflowRulePack pack) {
-        return buildGuidanceContent(pack);
+    String guidanceContentForTest(WorkflowRulePack pack, WorkflowGovernanceRule rule) {
+        return buildGuidanceContent(pack, rule);
     }
 
     String contentHashForTest(String content) {
@@ -105,6 +110,8 @@ public class WorkflowBuilderKnowledgeService {
             return knowledgeBaseRepository.saveAndFlush(entity);
         }
         catch (DataIntegrityViolationException exception) {
+            // saveAndFlush owns its transaction. Once it rolls back, a concurrent creator can be
+            // read safely without leaving this service in a rollback-only outer transaction.
             return knowledgeBaseRepository.findByOwnerIdAndPurposeAndSystemManagedTrue(ownerId,
                     KnowledgeBasePurpose.WORKFLOW_BUILDER)
                     .orElseThrow(() -> exception);
@@ -112,39 +119,64 @@ public class WorkflowBuilderKnowledgeService {
     }
 
     private void synchronizeGuidance(String ownerId, String kbId, List<WorkflowRulePack> packs) {
-        Map<String, ManagedGuidanceDocument> desiredDocuments = new LinkedHashMap<>();
-        for (WorkflowRulePack pack : packs) {
-            String title = "Workflow Builder Guidance: " + pack.id() + "@" + pack.version();
-            String content = buildGuidanceContent(pack);
-            desiredDocuments.put(title, new ManagedGuidanceDocument(title, content, contentHash(content)));
-        }
-
-        List<DocumentEntity> existingDocuments = loadExistingDocuments(ownerId, kbId);
+        Map<String, ManagedGuidanceDocument> desiredDocuments = desiredDocuments(packs);
         Map<String, List<DocumentEntity>> existingByTitle = new LinkedHashMap<>();
-        for (DocumentEntity existing : existingDocuments) {
+        for (DocumentEntity existing : loadExistingDocuments(ownerId, kbId)) {
             existingByTitle.computeIfAbsent(existing.getTitle(), ignored -> new ArrayList<>()).add(existing);
         }
 
         for (Map.Entry<String, List<DocumentEntity>> entry : existingByTitle.entrySet()) {
-            ManagedGuidanceDocument desired = desiredDocuments.get(entry.getKey());
+            ManagedGuidanceDocument desired = desiredDocuments.remove(entry.getKey());
             List<DocumentEntity> duplicates = entry.getValue();
             if (desired == null) {
-                duplicates.forEach(document -> documentManagementService.deleteDocument(document.getId()));
+                duplicates.forEach(this::deleteDocument);
                 continue;
             }
-            DocumentEntity primary = duplicates.get(0);
-            for (int index = 1; index < duplicates.size(); index++) {
-                documentManagementService.deleteDocument(duplicates.get(index).getId());
+
+            DocumentEntity primary = duplicates.getFirst();
+            duplicates.stream().skip(1).forEach(this::deleteDocument);
+            if (Objects.equals(primary.getContentHash(), desired.contentHash())) {
+                continue;
             }
-            if (!Objects.equals(primary.getContentHash(), desired.contentHash())) {
-                documentManagementService.deleteDocument(primary.getId());
-                knowledgeIngestionService.addManagedTextDocument(kbId, desired.title(), desired.content());
-            }
-            desiredDocuments.remove(entry.getKey());
+
+            deleteDocument(primary);
+            ingestManagedDocument(ownerId, kbId, desired);
         }
 
         for (ManagedGuidanceDocument desired : desiredDocuments.values()) {
+            ingestManagedDocument(ownerId, kbId, desired);
+        }
+    }
+
+    private Map<String, ManagedGuidanceDocument> desiredDocuments(List<WorkflowRulePack> packs) {
+        Map<String, ManagedGuidanceDocument> documents = new LinkedHashMap<>();
+        for (WorkflowRulePack pack : packs) {
+            for (WorkflowGovernanceRule rule : pack.rules()) {
+                String title = DOCUMENT_TITLE_PREFIX + pack.id() + "/" + rule.id();
+                String content = buildGuidanceContent(pack, rule);
+                documents.put(title, new ManagedGuidanceDocument(title, content, contentHash(content)));
+            }
+        }
+        return documents;
+    }
+
+    private void ingestManagedDocument(String ownerId, String kbId, ManagedGuidanceDocument desired) {
+        try {
             knowledgeIngestionService.addManagedTextDocument(kbId, desired.title(), desired.content());
+        }
+        catch (DataIntegrityViolationException exception) {
+            boolean concurrentWinnerMatches = loadExistingDocuments(ownerId, kbId).stream()
+                    .anyMatch(document -> Objects.equals(document.getTitle(), desired.title())
+                            && Objects.equals(document.getContentHash(), desired.contentHash()));
+            if (!concurrentWinnerMatches) {
+                throw exception;
+            }
+        }
+    }
+
+    private void deleteDocument(DocumentEntity document) {
+        if (document.getId() != null) {
+            documentManagementService.deleteDocument(document.getId());
         }
     }
 
@@ -153,7 +185,8 @@ public class WorkflowBuilderKnowledgeService {
         int pageNumber = 0;
         Page<DocumentEntity> page;
         do {
-            page = documentRepository.findByOwnerIdAndKbIdAndIndexStatusNotIn(ownerId, kbId, NON_RETRIEVABLE,
+            page = documentRepository.findByOwnerIdAndKbIdAndSourceTypeAndIndexStatusNotIn(
+                    ownerId, kbId, BUILDER_SOURCE_TYPE, NON_RETRIEVABLE,
                     PageRequest.of(pageNumber++, SCAN_PAGE_SIZE, Sort.by("id").ascending()));
             documents.addAll(page.getContent());
         }
@@ -161,32 +194,33 @@ public class WorkflowBuilderKnowledgeService {
         return documents;
     }
 
-    private String buildGuidanceContent(WorkflowRulePack pack) {
+    private String buildGuidanceContent(WorkflowRulePack pack, WorkflowGovernanceRule rule) {
         StringBuilder builder = new StringBuilder();
         append(builder, "Pack: " + pack.id());
-        append(builder, "Version: " + pack.version());
-        if (!pack.domains().isEmpty()) {
-            append(builder, "Domains: " + String.join(", ", pack.domains()));
-        }
-        append(builder, "Knowledge:");
-        for (String entry : pack.knowledgeEntries()) {
-            append(builder, "- " + entry);
-        }
-        append(builder, "Rules:");
-        for (WorkflowGovernanceRule rule : pack.rules()) {
-            append(builder, "* " + rule.title());
-            append(builder, "  Severity: " + rule.severity());
-            append(builder, "  Description: " + rule.description());
-            append(builder, "  Repair hint: " + rule.repairHint());
-        }
+        append(builder, "Rule: " + rule.id());
+        append(builder, "Title: " + rule.title());
+        append(builder, "Severity: " + rule.severity());
+        append(builder, "Detector: " + rule.detector());
+        append(builder, "Rationale:");
+        append(builder, rule.description());
+        appendList(builder, "Anti-patterns:", rule.antiPatterns());
+        appendList(builder, "Examples:", rule.examples());
+        append(builder, "Repair hint:");
+        append(builder, rule.repairHint());
+        appendList(builder, "Domains:", pack.domains());
+        appendList(builder, "Pack guidance:", pack.knowledgeEntries());
         return builder.toString().trim();
     }
 
+    private void appendList(StringBuilder builder, String heading, List<String> values) {
+        append(builder, heading);
+        values.forEach(value -> append(builder, "- " + value));
+    }
+
     private void append(StringBuilder builder, String line) {
-        if (line == null || line.isBlank()) {
-            return;
+        if (line != null && !line.isBlank()) {
+            builder.append(line).append('\n');
         }
-        builder.append(line).append('\n');
     }
 
     private String contentHash(String content) {
